force-app/main/default/objects/PromotionTarget__c/PromotionTarget__c.object-meta.xml
<CustomObject>
    <label>프로모션 대상</label>
    <nameField>
        <label>Promotion Target Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>