force-app/main/default/objects/PromotionTarget__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotion Target</relationshipLabel>
    <relationshipName>Promotion_Target</relationshipName>
    <type>Lookup</type>
</CustomField>