force-app/main/default/objects/PromotionTarget__c/fields/AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentAmount__c</fullName>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>