force-app/main/default/objects/PromotionTarget__c/fields/AdjustmentPercent__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentPercent__c</fullName>
    <label>Adjustment Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>