force-app/main/default/objects/PromotionTarget__c/fields/AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentType__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FixedAmountOffLineItemTotal</fullName>
            </value>
            <value>
                <fullName>FixedAmountOffTransaction</fullName>
            </value>
            <value>
                <fullName>FixedAmountOffUnitPrice</fullName>
            </value>
            <value>
                <fullName>FixedPrice</fullName>
            </value>
            <value>
                <fullName>PercentageDiscount</fullName>
            </value>
            <value>
                <fullName>TotalFixedPrice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>