force-app/main/default/objects/PromotionTarget__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Promotion Target</relationshipLabel>
    <relationshipName>Promotion_Target</relationshipName>
    <type>Lookup</type>
</CustomField>