force-app/main/default/objects/PromotionTarget__c/fields/ExternalTarget__c.field-meta.xml
<CustomField>
    <fullName>ExternalTarget__c</fullName>
    <label>External Target</label>
    <length>180</length>
    <type>Text</type>
</CustomField>