force-app/main/default/objects/PromotionTarget__c/fields/IsMinItemCountRequired__c.field-meta.xml
<CustomField>
    <fullName>IsMinItemCountRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply discount only when a cart reaches</label>
    <type>Checkbox</type>
</CustomField>