force-app/main/default/objects/PromotionTarget__c/fields/PromotionId__c.field-meta.xml
<CustomField>
    <fullName>PromotionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion ID</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Promotion Target</relationshipLabel>
    <relationshipName>Promotion_Target</relationshipName>
    <type>Lookup</type>
</CustomField>