force-app/main/default/objects/PromotionTarget__c/fields/RestrictionQuantity__c.field-meta.xml
<CustomField>
    <fullName>RestrictionQuantity__c</fullName>
    <label>Quantity Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>