force-app/main/default/objects/PromotionTarget__c/fields/TargetProductCategoryName__c.field-meta.xml
<CustomField>
    <fullName>TargetProductCategoryName__c</fullName>
    <label>Target Category Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>