force-app/main/default/objects/PromotionTarget__c/fields/TargetProductName__c.field-meta.xml
<CustomField>
    <fullName>TargetProductName__c</fullName>
    <label>Target Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>