force-app/main/default/objects/PromotionTarget__c/fields/TargetProductSku__c.field-meta.xml
<CustomField>
    <fullName>TargetProductSku__c</fullName>
    <label>Target Product SKU</label>
    <length>180</length>
    <type>Text</type>
</CustomField>